<resources>
    <string name="app_name">ControlFlix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Control horario y diestas</string>
    <string name="nav_header_subtitle">Trabajadores de Transportes Flix</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha">Fecha</string>
    <string name="selecciona_hoy">Selecciona \nhoy</string>
    <string name="selecciona_otro_dia">Selecciona\notro dia</string>
    <string name="seleccionar_fecha">seleccionar fecha</string>
    <string name="adr">ADR</string>
    <string name="_0_00">0,00</string>
    <string name="title_activity_otras_actividades">OtrasActividades</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="Otras_actividades">Otras actividades</string>
    <string name="horas_trabaja">Horas de trabajo</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="selecciona_hora">Selecciona hora</string>
    <string name="hora_final">Hora Final</string>
    <string name="total">Total: </string>
    <string name="selecciona">Selecciona</string>
    <string name="fechaTabla">FECHA</string>
    <string name="diaTabla">DIA</string>
    <string name="hora_inicioTabla">HORA INICIO</string>
    <string name="hora_finalTabla">HORA FINAL</string>
    <string name="total_horasTabla">TOTAL HORAS</string>
    <string name="adrTabla">ADR</string>
    <string name="desayunoTabla">DESAYUNO</string>
    <string name="comidaTabla">COMIDA</string>
    <string name="cenaTabla">CENA</string>
    <string name="dormirTabla">DORMIR</string>
    <string name="totalDietaTabla">TOTAL</string>
    <string name="extrasTabla">EXTRAS</string>
    <string name="idTabla">ID</string>
    <string name="select01">Vacaciones</string>
    <string name="select02">Baja</string>
    <string name="select03">Asuntos propios</string>
    <string name="select04">Sanciones</string>
    <string name="select05">Otros</string>
    <string name="select06">Festivo</string>
    <string name="precio_dieta">0</string>
    <string name="titulo">Precio de las dietas</string>
    <string name="nacional">Nacional</string>
    <string name="tir">TIR</string>
    <string name="italia">Italia</string>
    <string name="alemenia">Alemenia</string>
    <string name="plaza">Plaza</string>
    <string name="comida_adr">Comida + ADR</string>
    <string name="desayuno">Desayuno</string>
    <string name="comida">Comida</string>
    <string name="cena">Cena</string>
    <string name="dormir">Dormir</string>
</resources>
